modified:   PyCitySchools/.ipynb_checkpoints/PyCity_homework-checkpoint.ipynb 	modified:   PyCitySchools/PyCitySchools_starter.ipynb     modified:   PyCitySchools/PyCity_homework.ipynb

--- a/PyCitySchools/PyCitySchools_starter.ipynb
+++ b/PyCitySchools/PyCitySchools_starter.ipynb
@@ -134,10 +134,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
-    "* Create an overview table that summarizes key metrics about each school, including:\n",
+    "# * Create an overview table that summarizes key metrics about each school, including:\n",
     "  * School Name\n",
     "  * School Type\n",
     "  * Total Students\n",
